# eaglertRecruitment

./: CMakeLists.txt  README.md  logging.cpp  main.cpp  parse.cpp  statistics.cpp  threadReceiver.cpp
include/: fsm.h  logging.h  parse.h  statistics.h  threadReceiver.h
src/: fsm.cpp  logging.cpp  main.cpp  parse.cpp  statistics.cpp  threadReceiver.cpp
